@@ -31,41 +31,49 @@ function runPageTest()
 
 function test()
 {
-    function sizeForType(entry, typeName)
+    function sizeForType(entry, typeNames)
     {
-        if (entry.name === typeName)
-            return entry.size;
+	for (var index = 0; index < typeNames.length; ++index) {
+            var typeName = typeNames[index];
+            var found = 0;
+            for (var i = 0; i < entry.children.length; ++i) {
+                var childEntry = entry.children[i];
+                if (childEntry.name === typeName) {
+                    if (index === typeNames.length - 1)
+                        return childEntry.size;
 
-        if (!entry.children)
-            return -1;
+                    if (!childEntry.children)
+                        return -1;
 
-        for (var i = 0; i < entry.children.length; ++i) {
-            var size = sizeForType(entry.children[i], typeName);
-            if (size > -1)
-                return size;
+                    entry = childEntry;
+                    found = 1;
+                    break;
+                }
+            }
+            if (!found)
+                return -1;
         }
 
         return -1;
     }
 
-    function receivedSizeMoreThan(messageObject, typeName, expectedSize)
+    function receivedSizeMoreThan(messageObject, typeNames, expectedSize)
     {
         var entry = messageObject["result"]["distribution"];
-        var size = sizeForType(entry, typeName);
+        var size = sizeForType(entry, typeNames);
         if (size > expectedSize)
-            InspectorTest.log("PASS: received size for type " + typeName + " is more than " + expectedSize);
+            InspectorTest.log("PASS: received size for type " + typeNames.join('.') + " is more than " + expectedSize);
         else
-            InspectorTest.log("FAIL: received size " + size + " for type " + typeName + " is less than " + expectedSize);
+            InspectorTest.log("FAIL: received size " + size + " for type " + typeNames.join('.') + " is less than " + expectedSize);
     }
 
     function handleMemorySnapshot(messageObject)
     {
         if ("error" in messageObject)
             InspectorTest.log(messageObject.error.message);
-        else {
-            receivedSizeMoreThan(messageObject, "Page.Audio", 15000000);
-            receivedSizeMoreThan(messageObject, "Page.Audio.SharedData", 15000000);
-        }
+        else
+            receivedSizeMoreThan(messageObject, ["Page", "Audio"], 15000000);
+            receivedSizeMoreThan(messageObject, ["Page", "Audio", "SharedData"], 15000000);
 
         InspectorTest.completeTest();
     }
