@@ -1,3 +1,9 @@
+2012-11-14  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Unreviewed test fix for r134593.
+
+        * inspector-protocol/nmi-webaudio.html:
+
 2012-11-14  Dominik Röttsches  <dominik.rottsches@intel.com>
 
         [EFL] Unreviewed gardening.
